@@ -1,16 +1,0 @@
-// SPDX-License-Identifier: BSD-3-Clause
-/* Copyright 2019, Intel Corporation */
-
-#include "auto_flush.h"
-#include "out.h"
-
-/*
- * pmem2_auto_flush -- check if platform supports auto flush for all regions
- */
-int
-pmem2_auto_flush(void)
-{
-	LOG(15, NULL);
-
-	return 0;
-}
